added socket.io-client to frontend and edited server

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,9 @@
     "version": "0.0.1",
     "description": "Tank Trouble like game",
     "type": "module",
+    "scripts": {
+        "start": "node server.js"
+    },
     "dependencies": {
         "express": "^4.21.2",
         "socket.io": "^4.8.1"
