--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,13 @@
     "description": "Tank Trouble like game",
     "type": "module",
     "scripts": {
-        "start": "node server.js"
+        "start": "nodemon server.js"
     },
     "dependencies": {
         "express": "^4.21.2",
         "socket.io": "^4.8.1"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.9"
     }
 }
