--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,25 @@
 {
-    "name": "tank-hey-game",
-    "version": "0.0.1",
-    "description": "Tank Trouble like game",
-    "scripts": {
-        "dev": "ts-node-dev --clear --respawn --transpile-only src/server.ts",
-        "build": "npx tsc",
-        "start": "node dist/server.js"
-    },
-    "dependencies": {
-        "express": "^4.21.2",
-        "socket.io": "^4.8.1"
-    },
-    "devDependencies": {
-        "@types/express": "^5.0.0",
-        "@types/node": "^22.13.5",
-        "@types/socket.io": "^3.0.1",
-        "nodemon": "^3.1.9",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.7.3"
-    }
+  "name": "tank-hey-game",
+  "version": "0.0.1",
+  "description": "Tank Trouble like game",
+  "scripts": {
+    "dev": "ts-node-dev --clear --respawn --transpile-only src/server.ts",
+    "build": "npx tsc",
+    "start": "node dist/server.js"
+  },
+  "dependencies": {
+    "express": "^4.21.2",
+    "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.5",
+    "@types/socket.io": "^3.0.1",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
+  },
+  "engines": {
+    "node": "22.14.0"
+  }
 }
