--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@types/socket.io": "^3.0.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   },
   "engines": {
