--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,10 @@
     "@types/socket.io": "^3.0.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   },
   "engines": {
-    "node": "22.14.0"
+    "node": ">=22.14.0"
   }
 }
